syntax = "proto3";
package palomachain.paloma.scheduler;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "palomachain/paloma/scheduler/params.proto";
import "palomachain/paloma/scheduler/job.proto";

option go_package = "github.com/palomachain/paloma/x/scheduler/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/palomachain/paloma/scheduler/params";
  }
  // Queries a list of GetJobByID items.
  rpc QueryGetJobByID(QueryGetJobByIDRequest)
      returns (QueryGetJobByIDResponse) {
    option (google.api.http).get =
        "/palomachain/paloma/scheduler/get_job_by_id";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [ (gogoproto.nullable) = false ];
}

message QueryGetJobByIDRequest { string jobID = 1; }

message QueryGetJobByIDResponse { Job job = 1; }
